2008-08-30 22:04  jannis

	* ChangeLog, autogen.sh:
	  * autogen.sh: Don't print errors when trying to detect the
	  revision
	  of a git svn repository.

2008-08-25 13:21  kelnos

	* ChangeLog, mcs-plugin/Makefile.am,
	  mcs-plugin/xfce4-panel-manager.desktop.in:
	  include panel settings dialog in new settings manager

2008-08-17 19:49  stephan

	* configure.in.in:
	  Bump version number

2008-08-17 19:48  stephan

	* configure.in.in, docs/API/tmpl/libxfce4panel-macros.sgml,
	  docs/API/tmpl/libxfce4panel-unused.sgml,
	  docs/API/tmpl/xfce-hvbox.sgml, docs/API/tmpl/xfce-itembar.sgml,
	  docs/API/tmpl/xfce-panel-enums.sgml,
	  docs/API/tmpl/xfce-panel-external-plugin.sgml,
	  docs/API/tmpl/xfce-panel-internal-plugin.sgml,
	  docs/API/tmpl/xfce-panel-plugin-iface.sgml,
	  docs/API/tmpl/xfce-panel-plugin.sgml,
	  docs/API/tmpl/xfce-panel-window.sgml:
	  Update version number (and docs)

2008-08-15 18:35  nick

	* plugins/clock/clock-digital.c:
	  * Don't return if the format is NULL, but fallback to the
	  default format instead.

2008-08-14 16:29  nick

	* plugins/clock/clock-analog.c, plugins/clock/clock-binary.c,
	  plugins/clock/clock-lcd.c:
	  * Clip the clock drawing areas.

2008-08-10 21:42  maximilian

	* po/ChangeLog, po/ko.po, po/pl.po:
	  Translations updated and added in Indonesian, Korean and Polish.

2008-08-10 13:50  nick

	* plugins/clock/clock-lcd.c:
	  * Fix drawing a of the lcd clock, improve rounding and
	  some code improvements (readability).

2008-08-10 11:43  nick

	* plugins/clock/clock-analog.c, plugins/clock/clock-binary.c,
	  plugins/clock/clock-dialog.c, plugins/clock/clock-digital.c,
	  plugins/clock/clock-lcd.c, plugins/clock/clock.c:
	  * Fix problems with the lcd clock (Bug #3960). Also
	  use new tooltip api when available.

2008-08-02 14:56  nick

	* plugins/clock/clock-lcd.c:
	  * Add 1px to the width to avoid drawing outside the
	  width due to rounding errors. Bug 3960.

2008-08-02 14:45  nick
